# gold-watch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TODOS.md  filter_french_guiana.py  filter_french_guiana_centroid.py  prd.md  pyproject.toml
configs/: mvp.yaml
data/: schema.sql
design/: DESIGN.md  ROADMAP_NEXT_STEPS.md  ROADMAP_PHASE_2.md  simplefeat.md
design/features/: FEATURE_00_copernicus_download.md  FEATURE_01_real_data_ingestion.md  FEATURE_02_cloud_masking.md  FEATURE_03_patch_generation.md  FEATURE_04_training_metrics.md  FEATURE_05_inference_evaluate.md  FEATURE_06_temporal_compositing.md  FEATURE_07_postprocess_export.md  FEATURE_08_baseline_rules.md  FEATURE_09_tile_cache.md  FEATURE_10_mine_clusterer.md  FEATURE_11_multi_scene_dataset.md  FEATURE_12_full_training.md  FEATURE_13_batch_inference.md  FEATURE_14_square_postprocess.md  FEATURE_15_mosaic_builder.md  FEATURE_16_web_map.md  FEATURE_17_docker_deploy.md  FEATURE_18_qgis_export.md  FEATURE_19_tile_registry_server.md  INDEX.md
scripts/: build_training_dataset.py  demo_end_to_end.py  demo_end_to_end_real.py  demo_feature0_download.py  demo_feature10_clusterer.py  demo_feature11_dataset.py  demo_feature12_train.py  demo_feature13_inference.py  demo_feature14_square.py  demo_feature15_mosaic.py  demo_feature16_web.py  demo_feature18_qgis.py  demo_feature1_validate.py  demo_feature2_cloud_mask.py  demo_feature3_patches.py  demo_feature4_train.py  demo_feature5_inference.py  demo_feature6_composite.py  demo_feature7_export.py  demo_feature8_baseline.py  demo_feature9_tile_cache.py  download_one_scene.py  inference_batch.py  make_patches.py  plot_labels.py  plot_training_history.py  train_phase2.py
src/goldmine_watch/: __init__.py  config.py
src/goldmine_watch/baseline/: rules.py
src/goldmine_watch/data/: __init__.py  build_training_dataset.py  cloud_mask.py  copernicus.py  dataset.py  ingest.py  mine_clusterer.py  mosaic.py  patches.py  splits.py  square_postprocess.py  stac.py  tile_cache.py  tile_registry.py  validate.py
src/goldmine_watch/export/: __init__.py  csv.py  qgis.py
src/goldmine_watch/inference/: __init__.py  batch.py  blender.py  evaluate.py  postprocess.py  predict.py  predict_big.py  tiler.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/functional/: test_feature_0_download.py  test_feature_10_mine_clusterer.py  test_feature_11_dataset.py  test_feature_12_training.py  test_feature_13_inference.py  test_feature_14_square.py  test_feature_15_mosaic.py  test_feature_16_web.py  test_feature_17_docker.py  test_feature_18_qgis.py  test_feature_1_validation.py  test_feature_2_cloud_masking.py  test_feature_3_patch_generation.py  test_feature_4_training.py  test_feature_5_inference.py  test_feature_6_compositing.py  test_feature_7_postprocess.py  test_feature_8_baseline.py  test_feature_9_tile_cache.py
tests/unit/: __init__.py  test_baseline.py  test_build_dataset.py  test_cloud_mask.py  test_compositing.py  test_copernicus_download.py  test_data_ingest.py  test_dataset.py  test_evaluate.py  test_export.py  test_inference.py  test_inference_batch.py  test_metrics.py  test_mine_clusterer.py  test_models.py  test_mosaic.py  test_patches.py  test_postprocess.py  test_qgis_export.py  test_real_data_validation.py  test_real_patches.py  test_splits.py  test_square_postprocess.py  test_tile_cache.py  test_tile_registry.py  test_tile_server.py  test_training.py  test_training_phase2.py
web/: Dockerfile  app.js  docker-compose.yml  index.html  server.py  style.css
(+3 files in other folders)
