[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldmine-watch"
version = "0.1.0"
description = "AI-assisted geospatial detection of potential gold mining surfaces in French Guiana from Sentinel-2 imagery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GoldMine Watch Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0",
    "torchvision",
    "segmentation-models-pytorch",
    "albumentations",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "rioxarray",
    "xarray",
    "dask",
    "requests>=2.25",
    "requests-oauthlib>=1.3",
    "numpy",
    "pandas",
    "scikit-learn",
    "scikit-image",
    "tqdm",
    "matplotlib",
    "pyyaml",
    "omegaconf",
    "pydantic>=2.0",
    "mgrs>=1.5",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "rio-tiler>=6.0",
    "pillow>=10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "requests-mock>=1.10",
    "httpx",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit",
    "jupyter",
    "notebook",
]

[project.scripts]
goldmine-train = "goldmine_watch.training.train:main"
goldmine-predict = "goldmine_watch.inference.predict:main"
goldmine-predict-big = "goldmine_watch.inference.predict_big:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "gpu: marks tests that require a GPU",
]

[tool.coverage.run]
source = ["src/goldmine_watch"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
